# chimera

./: .gitignore  CITATION.cff  ChiMera_class.ipynb  LICENSE  README.md  add_medium.py  chimera_core.py  conda_requirements.txt  environment.yml  environment_linux.yml  path_harvest.py  pip_requirements.txt  pyproject.toml  setup.cfg  setup.py  simulating_knockouts.py  translator_using_bigg.py
all_metabo_paths/: central_carbon_metabolism_final.json  glycolysis_TCA_PPP.json  nucleotide_metabolism.json  partial_amino_acid metabolism.json  tryptophan_metabolism.json
dependencies/all_metabo_paths/: carbohydrate_metabolism.json  central_metabolism.json  fatty_acid_beta_oxidation.json  inositol_retinol_metabolism.json
input_examples/faa_file/: e_coli_test.faa  e_coli_test.tsv
input_examples/growth_predictions/: growth_ref_vs_test_bs.csv  growth_ref_vs_test_ec.csv  growth_ref_vs_test_pp.csv
input_examples/media_to_add/: new_media.tsv
input_examples/reations_gene_to_delete/: knockout_genes_list.txt  knockout_reactions_list.txt
input_examples/treasure_chest/: e_coli_test.json  e_coli_test_enriched_paths.csv  e_coli_test_enriched_paths_top30_pathwats.html  e_coli_test_reactions_edges.tsv  e_coli_test_uptake_secretion_rates.csv  formatted_e_coli_test.json
paper_data/tables/: Additional_file_2.xlsx
src/ChiMera/: chimera_core.py
src/ChiMera/tools/: path_harvest.py  silencer.py
src/ChiMera_ModelBuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ChiMera_gsmr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: path_harvest.py  silencer.py
(+17 files in other folders)
