[metadata]
name = ChiMera-ModelBuilder
version = 2.0.2
author = Tamasco Gustavo
author_email = tamascogustavo@gmail.com
license = gpl3
description = ChiMera: An easy-to-use pipeline for Genome-based Metabolic Network reconstruction, evaluation, and visualization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tamascogustavo/chimera
project_urls =
    Bug Tracker = https://github.com/tamascogustavo/chimera/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir =
    = src
scripts = src/ChiMera/chimera_core.py
packages = find:
python_requires = ~=3.6
install_requires =
    python~=3.6
    carveme
    MarkupSafe~=2.0.1
    diamond
    cobra
    escher~=1.7.3
    psamm
    ray
    seaborn
    matplotlib
    bs4
    argparse
    requests
    numpy
    plotly
    plotly-express


[options.packages.find]
where = src

[options.package_data]
ChiMera =
	tools/*
	dependencies/all_metabo_paths/*.json

[bdist_wheel]
universal = 1
